--- a/views/admin/include/footer.ejs
+++ b/views/admin/include/footer.ejs
@@ -52,7 +52,7 @@
 
 <script>
     $(document).ready(function () {
-    let sideelements =  ['dashboard','users','services','franchises','referances'];
+    let sideelements =  ['dashboard','users','services','franchises','referances','messages'];
         let href = $(location).attr('href');
         sideelements.forEach(element => {
           if (href.indexOf(element) > -1) {
