--- a/views/admin/message/messageDetail.ejs
+++ b/views/admin/message/messageDetail.ejs
@@ -37,7 +37,7 @@
                             </div>
                             <hr class="my-0" />
                             <div class="footer p-2 d-flex justify-content-end align-items-center">
-                                <button type="submit" class="btn btn-sm btn-primary me-2 font12px">
+                                <button type="submit" class="btn btn-sm btn-primary font12px">
                                     <i class="bx bx-conversation"></i>
                                     Yanıtla
                                 </button>
